# team-task-racker

backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/account/: serializers.py  urls.py  views.py
backend/backend/: settings.py
backend/organization/: admin.py  models.py  serializers.py  urls.py  views.py
backend/organization/migrations/: 0001_initial.py
backend/tasks/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
backend/tasks/migrations/: 0001_initial.py
frontend/: next.config.ts  package.json  proxy.ts
frontend/app/: layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/tasks/: page.tsx
frontend/components/: app-sidebar.tsx  login-form.tsx  nav-main.tsx  nav-projects.tsx  nav-secondary.tsx  nav-user.tsx  signup-form.tsx
frontend/components/common/: delete.tsx  error.tsx  loading.tsx  priority.tsx  status-badge.tsx
frontend/components/dashboard/: dashboard-analytics-card.tsx  dashboard-card.tsx  dashboard-completion-bar.tsx  dashboard-empty-state.tsx  dashboard-header.tsx  dashboard-loading.tsx  dashboard-overdue-row.tsx  empty.tsx  error-dashboard.tsx  utils.ts
frontend/components/organizations/: AddEditOrganization.tsx
frontend/components/projects/: AddEditProjects.tsx
frontend/context/: auth-provider.tsx  tanstack.tsx
frontend/lib/: axios.ts
frontend/schema/: analytics.ts  login.ts  organization.ts  project.ts  task.ts
frontend/store/: authStore.ts  userStore.ts
frontend/types/: assign-user.ts  generic.ts
(+5 files in other folders)
