[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=26.0.0",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]
